--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,10 +1,10 @@
 {
-	"X": "X1",
-	"O": "O1",
-	"PlayerTurnX": "Player Turn: X1",
-	"PlayerTurnO": "Player Turn: O1",
-	"PlayAgain": "Play Again!",
-	"Winner": "Winner",
-	"GotoStart": "Move to Start Position",
-	"MoveToPosition": "Move to Position"
+	"X": "X",
+	"O": "O",
+	"PlayerTurnX": "Spieler Drehen: X",
+	"PlayerTurnO": "Spieler Drehen: O1",
+	"PlayAgain": "Spiel Nochmal!",
+	"Winner": "Gewinner",
+	"GotoStart": "Gehen Sie zur Startposition",
+	"MoveToPosition": "In Position bringen"
 }
