--- a/src/assets/i18n/locales/en.json
+++ b/src/assets/i18n/locales/en.json
@@ -3,8 +3,8 @@
 	"O": "O",
 	"PLAYER_TURN_X": "Player Turn: X",
 	"PLAYER_TURN_O": "Player Turn: O",
-	"PLAY_AGAIN": "Play Again!",
+	"PLAY_AGAIN": "Play Again",
 	"WINNER": "Winner",
-	"GOTO_START": "Move to Start Position",
-	"MOVE_TO_POSITION": "Move to Position"
+	"GOTO_START": "Start",
+	"MOVE_TO_POSITION": "Step"
 }
